--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="keywords" content="个人网站">
+    <meta name="description" content="chenchao 个人网站">
+    <link rel="shortcut icon" type="image/x-icon" href="//www.chenchaoc.top/favicon.ico">
+    <link rel="apple-touch-icon" href="//www.chenchaoc.top/touch-icon.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
     <div id="app"></div>
+    <!-- 百度统计 -->
+    <script async src="https://hm.baidu.com/hm.js?c7be48cf605f72cac85928f6ca39e4cd"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124038160-1"></script>
+    <!-- webpack auto inject -->
 </body>
 </html>
